# github-slack-pr-notifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config_example.json  docker-compose.yml  fetch.py  pyproject.toml  requirements.txt  send.py
.claude/skills/run-notifier/: SKILL.md
src/: main.py
src/notifier/: README.md  fetch.py  main.py  productivity_formatter.py  productivity_notifier.py  properties.py  pull_request_fetcher.py  repository.py  runner.py  send.py  slack_client.py  slack_notifier.py  summary_formatter.py
tests/: main_test.py  productivity_formatter_test.py  properties_test.py  repository_test.py  summary_formatter_test.py  title_filter_test.py
tests/test_resources/: test_config.json
