[tool.poetry]
name = "github-slack-pr-notifier"
version = "1.5"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
slack-sdk = "^3.31.0"
PyGithub = "^2.3.0"
python-dotenv = "^1.0.1"
regex = "^2024.9.11"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
poethepoet = "^0.29.0"
pytest = "^8.3.2"
pytest-pylint = "^0.21.0"
mypy = "^1.11.1"
pytest-mypy = "^0.10.3"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format-code = ["_isort", "_black"]

[tool.pytest.ini_options]
addopts = "--verbose --pylint --pylint-rcfile=pyproject.toml --mypy"
pythonpath = "src"

[tool.isort]
profile = "black"

[tool.black]
line-length = 150
extend-exclude = '''
/(
    tests
)/
'''

[tool.mypy]
strict = true
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    seless-import-alias,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecessary-pass,
    broad-except,
    bare-except,
    consider-using-from-import,
    raise-missing-from,
    no-else-return
    """
ignored_argument_names = "_.*|^ignored_|^unused_|args|kwargs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
