[tool.poetry]
name = "github-slack-pr-notifier"
version = "2.4"
description = ""
authors = []
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
slack-sdk = "^3.36.0"
PyGithub = "^2.9.1"
python-dotenv = "^1.1.1"
regex = "^2026.4.4"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
poethepoet = "^0.44.0"
pytest = "^9.0.2"
mypy = "^1.20.1"
pylint = "^4.0.0"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format-code = ["_isort", "_black"]
test = "pytest"
type = "mypy src/"
lint = { cmd = "pylint src/ --rcfile=pyproject.toml", help = "Run pylint on src/" }
check = { sequence = [
    "type",
    "lint",
    "test",
], help = "Run all quality checks: type checking → linting → tests" }

[tool.pytest.ini_options]
addopts = "--verbose"
pythonpath = "src"

[tool.isort]
profile = "black"

[tool.black]
line-length = 150
extend-exclude = '''
/(
    tests
)/
'''

[tool.mypy]
strict = true
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true


[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    useless-import-alias,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecessary-pass,
    broad-except,
    bare-except,
    consider-using-from-import,
    raise-missing-from,
    no-else-return
    """

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
